discussion/kv_engine/184583/184583_rev17_discussion.txt
======================================================================================================================
DESCRIPTION:

Add experimental support for gRPC

Very WIP experimental support for gRPC

  * _BLOCKING_ the gRPC call for the duration of an operation
    (intentionally as we've not even tried to plug it into
    our async mode (thread is just waiting for the notification)
  * Only partly implementing the protocol spec'd from
    stellar-nebula (that protocol should probably get some
    love as it duplicates a lot of structs; have some "weird"
    parts etc)
  * Does not deal with all datatypes in all cases, copying over
    xattrs etc

Ex:

    ./grpc_test --user trond --password asdfasdf  Increment '
       {"key":"User1",
        "delta":1,
	"expiry":0,
	"initial":50,
	"scope_name":"foo",
	"collection_name":"bar",
	"bucket_name":"bucket"}'

    {
      "cas": 1674545273432637440,
      "content": 50,
      "mutation_token": {
        "bucket_name": "bucket",
        "seq_no": 3,
        "vbucket_id": 400,
        "vbucket_uuid": 88398876445528
      }
    }

Change-Id: If522f57fcbc1df3bb0c834302ea2260786a7250b

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2023-01-26 13:30:30.000000000
Message: 
Uploaded patch set 17.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-01-26 14:07:02.000000000
Message: 
Patch Set 17: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22551/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/grpc/rpc_append_prepend_command.h:19:10: error: "kv.v1.grpc.pb.h" file not found [clang-diagnostic-error]
#include "kv.v1.grpc.pb.h"
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/grpc/rpc_arithmetic_command.h:19:10: error: "kv.v1.grpc.pb.h" file not found [clang-diagnostic-error]
#include "kv.v1.grpc.pb.h"
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/grpc/rpc_command_context.h:19:10: error: "kv.v1.grpc.pb.h" file not found [clang-diagnostic-error]
#include "kv.v1.grpc.pb.h"
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/grpc/rpc_cookie.h:20:10: error: "grpcpp/server.h" file not found [clang-diagnostic-error]
#include <grpcpp/server.h>
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/grpc/rpc_exists_command.h:19:10: error: "kv.v1.grpc.pb.h" file not found [clang-diagnostic-error]
#include "kv.v1.grpc.pb.h"
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/grpc/rpc_get_and_lock_command.h:18:10: error: "kv.v1.grpc.pb.h" file not found [clang-diagnostic-error]
#include "kv.v1.grpc.pb.h"
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/grpc/rpc_get_and_touch_command.h:18:10: error: "kv.v1.grpc.pb.h" file not found [clang-diagnostic-error]
#include "kv.v1.grpc.pb.h"
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/grpc/rpc_get_command.h:19:10: error: "kv.v1.grpc.pb.h" file not found [clang-diagnostic-error]
#include "kv.v1.grpc.pb.h"
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/grpc/rpc_get_replica_command.h:19:10: error: "kv.v1.grpc.pb.h" file not found [clang-diagnostic-error]
#include "kv.v1.grpc.pb.h"
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/grpc/rpc_insert_command.h:19:10: error: "kv.v1.grpc.pb.h" file not found [clang-diagnostic-error]
#include "kv.v1.grpc.pb.h"
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/grpc/rpc_remove_command.h:19:10: error: "kv.v1.grpc.pb.h" file not found [clang-diagnostic-error]
#include "kv.v1.grpc.pb.h"
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/grpc/rpc_replace_command.h:19:10: error: "kv.v1.grpc.pb.h" file not found [clang-diagnostic-error]
#include "kv.v1.grpc.pb.h"
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/grpc/rpc_service.cc:18:10: error: "kv.v1.grpc.pb.h" file not found [clang-diagnostic-error]
#include "kv.v1.grpc.pb.h"
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/grpc/rpc_touch_command.h:19:10: error: "kv.v1.grpc.pb.h" file not found [clang-diagnostic-error]
#include "kv.v1.grpc.pb.h"
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/grpc/rpc_unlock_command.h:19:10: error: "kv.v1.grpc.pb.h" file not found [clang-diagnostic-error]
#include "kv.v1.grpc.pb.h"
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/grpc/rpc_upsert_command.h:19:10: error: "kv.v1.grpc.pb.h" file not found [clang-diagnostic-error]
#include "kv.v1.grpc.pb.h"
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/programs/grpc/main.cc:17:10: error: "kv.v1.grpc.pb.h" file not found [clang-diagnostic-error]
#include "kv.v1.grpc.pb.h"
         ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22551/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/grpc/rpc_append_prepend_command.h:19:10:
error: "kv.v1.grpc.pb.h" file not found [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22551/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/51944/ : FAILURE

Failure of GoogleTest "TransportProtocols/StatsTest.MB37147_TestEWBReturnFromStat/McbpSsl":

<pre>
[ RUN      ] TransportProtocols/StatsTest.MB37147_TestEWBReturnFromStat/McbpSsl
C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/tests/testapp/testapp_stats.cc(302): error: Value of: stats.empty()
  Actual: true
Expected: false
[  FAILED  ] TransportProtocols/StatsTest.MB37147_TestEWBReturnFromStat/McbpSsl, where GetParam() = McbpSsl (4 ms)
TransportProtocols/StatsTest.MB37147_TestEWBReturnFromStat/McbpSsl
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/51944/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/25027/ : FAILURE

Failure of GoogleTest "EphemeralOrPersistent/STExpiryPagerTest.ExpiredItemsDeleted/magma_persistent_value_only":

<pre>
[ RUN      ] EphemeralOrPersistent/STExpiryPagerTest.ExpiredItemsDeleted/magma_persistent_value_only
[2023-01-26T13:52:16.270Z] ../kv_engine/engines/ep/tests/module_tests/item_pager_test.cc:1778: Failure
[2023-01-26T13:52:16.270Z] Expected equality of these values:
[2023-01-26T13:52:16.270Z]   cb::engine_errc::success
[2023-01-26T13:52:16.270Z]     Which is: success
[2023-01-26T13:52:16.270Z]   getKeyFn(key_2)
[2023-01-26T13:52:16.270Z]     Which is: no such key
[2023-01-26T13:52:16.270Z] Key with TTL:20 should still exist.
[2023-01-26T13:52:16.270Z] ../kv_engine/engines/ep/tests/module_tests/item_pager_test.cc:1785: Failure
[2023-01-26T13:52:16.270Z] Expected equality of these values:
[2023-01-26T13:52:16.270Z]   2
[2023-01-26T13:52:16.270Z]   engine->getVBucket(vbid)->getNumItems()
[2023-01-26T13:52:16.270Z]     Which is: 1
[2023-01-26T13:52:16.270Z] Should still have 2 items after time-travelling
[2023-01-26T13:52:16.270Z] [  FAILED  ] EphemeralOrPersistent/STExpiryPagerTest.ExpiredItemsDeleted/magma_persistent_value_only, where GetParam() = "backend=magma:bucket_type=persistent:item_eviction_policy=value_only" (14755 ms)
EphemeralOrPersistent/STExpiryPagerTest.ExpiredItemsDeleted/magma_persistent_value_only
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/25027/ )

Timeout of a CTest test [2023-01-26T13:55:55.403Z]  13/476 Test #274: ep-engine_ep_unit_tests.EphemeralOrPersistent/STItemPagerTest ...........................................} ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/25027/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/33022/ : FAILURE

Failure of GoogleTest "DcpTest.DcpDrainNoMeterNoThrottle":

<pre>
[ RUN      ] DcpTest.DcpDrainNoMeterNoThrottle
[2023-01-26T13:35:49.877Z] unknown file: Failure
[2023-01-26T13:35:49.877Z] C++ exception with description "Header::getResponse(): Header is not a response" thrown in the test body.
[2023-01-26T13:35:49.877Z] [  FAILED  ] DcpTest.DcpDrainNoMeterNoThrottle (15 ms)
DcpTest.DcpDrainNoMeterNoThrottle
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/33022/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43588/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/22391/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/1321/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/12275/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/12359/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/25896/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/24602/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/24143/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
